--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
         <div class="content active" id="details">
             <div class="task-info">
-                <div><img src="assets/icon-status.svg" alt="Status"> Status: <span id="status" class="info"></span></div>
-                <div><img src="assets/icon-assignee.svg" alt="Assignee"> Assignee: <span id="assignee" class="info"></span></div>
-                <div><img src="assets/icon-reporter.svg" alt="Reporter"> Reporter: <span id="reporter" class="info"></span></div>
-                <div><img src="assets/icon-importance.svg" alt="Importance"> Importance: <span id="importance" class="info"></span></div>
-                <div><img src="assets/icon-taskid.svg" alt="Task"> Task ID: <span id="task_id" class="info"></span></div>
+                <div class="added-class"><img src="assets/icon-status.svg" alt="Status"><div class="new-test"><span>Status:</span><span id="status" class="info"></span></div></div>
+                <div class="added-class"><img src="assets/icon-assignee.svg" alt="Assignee"><div class="new-test"><span>Assignee:</span><span id="assignee" class="info"></span></div></div>
+                <div class="added-class"><img src="assets/icon-reporter.svg" alt="Reporter"><div class="new-test"><span>Reporter:</span> <span id="reporter" class="info"></span></div></div>
+                <div class="added-class"><img src="assets/icon-importance.svg" alt="Importance"><div class="new-test"><span>Importance:</span> <span id="importance" class="info"></span></div></div>
+                <div class="added-class"><img src="assets/icon-taskid.svg" alt="Task"><div class="new-test"><span>Task ID:</span> <span id="task_id" class="info"></span></div></div>
             </div>
             
             <div class="line"></div>
